codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__agents_dashboard_empty.snap
---
source: tui/src/resume_picker.rs
expression: "render_dashboard_list_snapshot(&state, 48, 4)"
---
/work/invocation  ─
❯               Start a new agent
  -              no branch
