codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__agents_dashboard_exit_confirmation.snap
---
source: tui/src/resume_picker.rs
expression: "render_dashboard_snapshot(&state, 80, 20)"
---
 Codex Agents

 Ctrl+F search sessions                                        Group: [project]

 ~/Projects/claudex  ─
 ❯ [Working]     Build the agents dashboard
   42s ago        no branch

 /work/invocation  ─
                 Start a new agent
   -              no branch






› Start a new agent in the selected project

   ctrl+c again to exit                                      100% context left
