codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__agents_dashboard_project_grouping.snap
---
source: tui/src/resume_picker.rs
expression: "render_dashboard_list_snapshot(&state, 92, 18)"
---
~/Projects/claudex  ─
❯ [Working]     Build the agents dashboard
  Loading recent activity…
  42s ago        no branch

  [Needs Input] Review daemon lifecycle
  Loading recent activity…
  36m ago        no branch

~/Projects/site  ─
  [Idle]        Update landing page
  Loading recent activity…
  2h ago         no branch

~/Projects/archive  ─
  [Done]        Old completed task
  Loading recent activity…
↓ more
