codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__agents_dashboard_scrolls_by_rendered_lines.snap
---
source: tui/src/resume_picker.rs
expression: "render_dashboard_list_snapshot(&state, 92, 7)"
---
↑ more
  Loading recent activity…
  42s ago        no branch

❯ [Working]     Polish dashboard scrolling
  Loading recent activity…
↓ more
