codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__dashboard_ctrl_x_confirms_archive_in_the_selected_row.snap
---
source: tui/src/resume_picker.rs
expression: "render_dashboard_list_snapshot(&state, 80, 12)"
---
/work/selected  ─
❯ [Idle]        Archive this chat? Ctrl+X again
  10m ago        no branch

/work/invocation  ─
                Start a new agent
  -              no branch
